# logtalk-jupyter-kernel

./: .gitignore  KERNEL_CONNECTION_FIX.md  LICENSE  Makefile  README.md  VSCODE_CELL_WIDGETS_GUIDE.md  VSCODE_WIDGET_GUIDE.md  WIDGET_IMPLEMENTATION_GUIDE.md  WIDGET_TROUBLESHOOTING.md  comprehensive_kernel_test.html  debug_kernel_connection.html  pyproject.toml  setup.cfg
logtalk_kernel/: __init__.py  __main__.py  install.py  kernel.py  logtalk_kernel_base_implementation.py  logtalk_kernel_config.py  sicstus_kernel_implementation.py  swi_kernel_implementation.py
logtalk_kernel/kernelspec/: kernel.js  kernel.json  logtalk_widgets.js.bak  logtalk_widgets.js.new
logtalk_kernel/logtalk_server/: jupyter.lgt  jupyter_forms.lgt  jupyter_jsonrpc.lgt  jupyter_logging.lgt  jupyter_preferences.lgt  jupyter_query_handling.lgt  jupyter_request_handling.lgt  loader.lgt  (+6 more)
notebooks/: JupyterKernelForLogtalkOverview.ipynb  LogtalkTutorial.ipynb  auto_sync_test.ipynb  embedded_function_test.ipynb  final_widget_test.ipynb  find_jupyterlab_app.ipynb  improved_widget_test.ipynb  jupyterlab_debug.ipynb  jupyterlab_object_test.ipynb  jupyterlab_widget_test.ipynb  kernel_discovery_test.ipynb  polling_widget_test.ipynb  realtime_widget_test.ipynb  safe_widget_test.ipynb  simple_app_search.ipynb  simple_jupyterlab_test.ipynb  simple_widget_test.ipynb  vscode_widget_examples.ipynb  widget_debug_test.ipynb  widget_examples.ipynb  widget_test.ipynb  working_sync_test.ipynb  working_widget_test.ipynb
prolog_kernel/: kernel.py  prolog_kernel_base_implementation.py  prolog_kernel_config.py
(+17 files in other folders)
