[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0"
]

[project]
name = "logtalk_kernel"
version = "0.1.0"
authors = [ { name="Anne Brecklinghaus" }, {name="Paulo Moura"} ]
description = "Extensible Jupyter kernel for Logtalk"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "jupyter_client",
  "IPython",
  "ipykernel",
  "graphviz",
  "beautifulsoup4",
]

[project.urls]
"Homepage" = "https://github.com/LogtalkDotOrg/logtalk-jupyter-kernel"
